package behavioral.observer.ca2;

public interface ButtonListener {
    void onClick();
}
